Fix vertical alignment in commits list

--- a/src/js/components/branch/commit-row.scss
+++ b/src/js/components/branch/commit-row.scss
@@ -6,6 +6,8 @@
 }
 
 .commit {
+  box-sizing: border-box;
+  height: 100%;
   padding: 20px 0;
   margin-left: 30px;
   border-bottom: 1px #f0f0f0 solid;
